<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/frag_add_bill_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/frag_add_bill_description_edit"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/bill_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/frag_add_bill_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:layout_constraintTop_toBottomOf="@+id/frag_add_bill_description"
            app:layout_constraintStart_toStartOf="@+id/frag_add_bill_description"
            app:layout_constraintEnd_toEndOf="@+id/frag_add_bill_description">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/frag_add_bill_value_edit"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/bill_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/frag_add_bill_expiration_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/bill_expiration_date"
            android:layout_margin="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frag_add_bill_payment_edit"
            app:layout_constraintTop_toBottomOf="@+id/frag_add_bill_value"/>


    <TextView
            android:id="@+id/frag_add_bill_payment_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/bill_payment_date"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/frag_add_bill_expiration_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_add_bill_value"/>


</android.support.constraint.ConstraintLayout>
