<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="@dimen/frag_bill_item_vertical_margin"
        android:paddingBottom="@dimen/frag_bill_item_vertical_margin"
        android:background="@color/colorPrimaryDark">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/header_bill_item_date"
                android:textSize="@dimen/frag_bill_item_header_size"
                android:textAllCaps="true"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorPrimaryLight"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/header_bill_item_description"
                android:textSize="@dimen/frag_bill_item_header_size"
                android:textAllCaps="true"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorPrimaryLight"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/header_bill_item_value"
                android:textSize="@dimen/frag_bill_item_header_size"
                android:textAllCaps="true"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorPrimaryLight"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@android:string/ok"
                android:textSize="@dimen/frag_bill_item_header_size"
                android:textAllCaps="true"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorPrimaryLight"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>