<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity"
        android:background="@color/colorPrimaryLight"
        android:padding="24dp">

    <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/cc_logo"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="34dp"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/imp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/imp_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/imp_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/imp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorSecondaryText"
            app:layout_constraintTop_toBottomOf="@+id/imp_username"
            app:layout_constraintStart_toStartOf="@+id/imp_username"
            app:layout_constraintEnd_toEndOf="@+id/imp_username"
            android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/bg_btn_login"
            android:textColor="@color/icons"
            app:layout_constraintTop_toBottomOf="@+id/imp_password"
            app:layout_constraintStart_toStartOf="@+id/imp_password"
            app:layout_constraintEnd_toEndOf="@+id/imp_password"/>

</android.support.constraint.ConstraintLayout>